Fix spacing in previews

--- a/src/components/ArticleEditor/ArticleEditor.module.scss
+++ b/src/components/ArticleEditor/ArticleEditor.module.scss
@@ -966,6 +966,10 @@
       margin-top: 0;
       margin-bottom: 20px;
 
+      &:last-child {
+        margin-bottom: 0px;
+      }
+
       code {
         color: var(--brand-text);
         font-family: "Fira Mono", monospace;
@@ -1124,8 +1128,8 @@
     }
 
     img {
-      margin-top: 0;
-      margin-bottom: 20px;
+      margin-top: 20px;
+      margin-bottom: 0px;
       overflow: hidden;
       border-radius: 12px;
       max-width: 100%;
@@ -1261,6 +1265,16 @@
           font-weight: inherit;
           line-height: inherit;
         }
+      }
+    }
+  }
+
+  &.phoneView, &.browserView {
+    .editor {
+      min-height: 0;
+
+      p:last-child {
+        height: 0;
       }
     }
   }
